# tjibbe-food

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.sh  docker-bake.hcl  input.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: docker-publish.yml
assets/: main.css  tailwind.css
src/: main.rs
src/backend/: calculator.rs  mod.rs  nutrients.rs
src/shared/: types.rs
