# Cargo.toml
cargo-features = ["edition2024"]

[package]
name = "nutrient_calculator"
authors = ["Fester Herenius <me@festerherenius.nl>"]
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
# Shared dependencies used by all variants
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
uom = "0.36.0"
dioxus = { version = "0.6.0", features = ["router"] }
getrandom = { version = "0.2", features = ["js"] }
strum = { version = "0.26", features = ["derive"] }

[[bin]]
name = "nutrient_calculator"
path = "src/main.rs"

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[build]
rustflags = [
    "-Clto",
    "-Zvirtual-function-elimination",
    "-Zlocation-detail=none"
]
[profile]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
